--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Christmas stories'
 - !lcc 'PZ'
+- GITenberg
 tableOfContents: The Legend of the "White Gifts" -- Her Birthday Dream -- The Fir
   Tree -- The Little Match Girl -- Little Piccola -- The Shepherd's Story -- The Story
   of Christmas -- The Legend of the Christmas Tree -- Little Jean -- How the Fir Tree
